--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
-Hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Zelz | Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: system-ui, sans-serif;
+      background: #0f172a;
+      color: #e5e7eb;
+      margin: 0;
+      padding: 2rem;
+    }
+    h1 { font-size: 2.5rem; }
+    .repos {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+      gap: 1rem;
+      margin-top: 2rem;
+    }
+    .repo {
+      background: #020617;
+      padding: 1rem;
+      border-radius: 12px;
+      border: 1px solid #1e293b;
+    }
+    .repo a {
+      color: #38bdf8;
+      font-weight: 600;
+      text-decoration: none;
+    }
+    .repo p {
+      font-size: 0.9rem;
+      opacity: 0.85;
+    }
+  </style>
+</head>
+<body>
+
+<h1>🚀 Zelz — GitHub Portfolio</h1>
+<p>All public projects</p>
+
+<div class="repos" id="repos"></div>
+
+<script>
+  fetch("https://api.github.com/users/JuanzelS/repos?sort=updated")
+    .then(res => res.json())
+    .then(data => {
+      const container = document.getElementById("repos");
+      data.forEach(repo => {
+        if (!repo.fork) {
+          const div = document.createElement("div");
+          div.className = "repo";
+          div.innerHTML = `
+            <a href="${repo.html_url}" target="_blank">${repo.name}</a>
+            <p>${repo.description || "No description"}</p>
+          `;
+          container.appendChild(div);
+        }
+      });
+    });
+</script>
+
+</body>
+</html>
